fixed some cross site links

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ name = swarmpyfac
 author = Ask Neve Gamby
 author_email = aknvg@space.dtu.dk
 version = attr: swarmpyfac.__version__
+url = https://github.com/asknevegamby/SwarmPyFAC
 description = Calculate Field Aligned Currents based on swarm data, mainly through the ViRES python interface viresclient. Some utilities for these kinds of scientific calculations are also provided.
 long_description = file: README.rst, CHANGELOG.rst, LICENSE
 license = None
