--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-numpy==1.17.3
-cdflib==0.3.17
-viresclient==0.4.2
-matplotlib==3.1.1
-scipy==1.3.1
-sphinx==2.2.1
-numpydoc==0.9.1
-hypothesis==4.42.3
-twine==2.0.0
+numpy>=1.17.3
+cdflib>=0.3.17
+viresclient>=0.4.2
+matplotlib>=3.1.1
+scipy>=1.3.1
+sphinx>=2.2.1
+numpydoc>=0.9.1
+hypothesis>=4.42.3
+twine>=2.0.0
+pytest
 wheel
